update static and requirements.txt

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ environs = {version = "==8.0.0", extras = ["django"]}
 psycopg2-binary = "==2.8.5"
 whitenoise = "==5.1.0"
 gunicorn = "==19.9.0"
+django-heroku = "*"
 
 [dev-packages]
 
