--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ dj-email-url==1.0.2
 Django==3.1.14
 django-cache-url==3.2.3
 django-crispy-forms==1.9.2
+django-heroku==0.3.1
 environs==8.0.0
 gunicorn==19.9.0
 marshmallow==3.14.1
+psycopg2==2.7.7
 psycopg2-binary==2.8.5
 python-dotenv==0.19.2
 pytz==2021.3
